# wework-education-system

./: .gitignore  CLAUDE.md  OPTIMIZED_DESIGN_2025.md  SETUP.md  analyze_database.py  database_analysis.json  database_structure.md  database_structure.sql  db_structure.json  simple_db_analyze.py  个人开发者企业微信教务系统实施方案.md  教务系统数据库结构文档.md
backend/: .env.example  .env.testing  CLAUDE.md  alembic.ini  app.py  pyproject.toml  pytest.ini  requirements.txt
backend/alembic/: CLAUDE.md  env.py
backend/alembic/versions/: 20260301_initial_tables.py
backend/app/: CLAUDE.md  CLAUDE_PAYMENT.md  main.py
backend/app/api/: CLAUDE.md  deps.py  exceptions.py
backend/app/core/: CLAUDE.md  config.py  db.py  logging.py  redis.py  scheduler.py  security.py  wework.py
backend/app/crud/: CLAUDE.md  __init__.py  attendance.py  contract.py  notification.py  payment.py  schedule.py  student.py
backend/app/models/: CLAUDE.md  __init__.py  attendance.py  contract.py  course.py  homework.py  miniapp_user.py  notification.py  payment.py  schedule.py  student.py  task_log.py  user.py
backend/app/payment/: ALIAY.md  CLAUDE.md  (+6 more)
backend/docs/: student_api_reference.md  student_management_implementation.md
backend/tests/: CLAUDE.md  conftest.py  test_api.py  test_attendance.py  test_auth.py  test_contract.py  test_course_service.py  test_courses.py  test_end_to_end.py  test_models.py  test_notification.py  test_payment.py  test_payment_callback_handler.py  test_payment_flow.py  test_student_api.py  test_student_integration.py  test_student_service.py  test_students.py  test_tasks.py  test_wechat_pay.py
(+256 files in other folders)
